--- a/uber/Drive.html
+++ b/uber/Drive.html
@@ -127,7 +127,30 @@
         <br>
         <p>Services</p>
     </div>
+    <div>
+        <h4>
+            Global citizenship
+        </h4>
+        <br>
+        <p>Safety</p>
+        <br>
+        <p>Diversity and Inclusion</p>
+        <br>
     </div>
+    <div>
+        <h4>
+            Travel
+        </h4>
+        <br>
+        <p>Reserve</p>
+        <br>
+        <p>Airports</p>
+        <br>
+        <p>Cities</p>
+    </div>
+    </div>
+    <br>
+    <br>
     <br>
     <div class="footicon">
         <i class="fa-brands fa-facebook"></i>
@@ -136,8 +159,8 @@
         <i class="fa-brands fa-instagram"></i>
     </div>
     <div class="plysto">
-    <a href=""><img src="https://d1a3f4spazzrp4.cloudfront.net/uber-com/1.3.8/d1a3f4spazzrp4.cloudfront.net/illustrations/app-store-google-4d63c31a3e.svg" alt="" height="150px" width="100px"></a>
-    <a href=""><img src="https://d1a3f4spazzrp4.cloudfront.net/uber-com/1.3.8/d1a3f4spazzrp4.cloudfront.net/illustrations/app-store-apple-f1f919205b.svg" alt="" height="150px" width="100px"></a>
+    <a href="https://play.google.com/store/apps/details?gl=US&hl=en_US&id=com.ubercab&referrer=singular_click_id%3De98efa0c-2835-4c5c-88d9-131ca144a215"><img src="https://d1a3f4spazzrp4.cloudfront.net/uber-com/1.3.8/d1a3f4spazzrp4.cloudfront.net/illustrations/app-store-google-4d63c31a3e.svg" alt="" height="150px" width="100px"></a>
+    <a href="https://apps.apple.com/us/app/uber-request-a-ride/id368677368?referrer=singular_click_id%3D4af94f81-30bb-4b6c-9959-0a038e281c88"><img src="https://d1a3f4spazzrp4.cloudfront.net/uber-com/1.3.8/d1a3f4spazzrp4.cloudfront.net/illustrations/app-store-apple-f1f919205b.svg" alt="" height="150px" width="100px"></a>
 </div>
 <p>&copy;2024Uber technologies</p>
     </footer>
